force-app/main/default/objects/Match__c/fields/JobCandidateUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>JobCandidateUniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>JobCandidateUniqueKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>